Added UUID, Entity Exception. Corrected HttpStatus, mappers and implementation.